--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-tedious_userName=doronoscar
-tedious_password=mlp0Nko9
-tedious_server=doron-oscar-server.database.windows.net
-tedious_database=DB
+tedious_userName=repfeed2021
+tedious_password=372matandoronaviranitay!
+tedious_server=ISE-NODEJS-W\SQLEXPRESS
+tedious_database=repFeed
 COOKIE_SECRET=abc
 twitter_apiKey=AAAAAAAAAAAAAAAAAAAAABWWHAEAAAAA5qMcqgr3KmW9M9c%2FjTpbLpNfstY%3DQJpI38tdylRmy2HXl5NsKI0F3giYdkC29dL1n4zI0LecMhmmGu
 spooncular_apiKeyPassed= 7def8aa945704d63ab8e3af517ea22b1
