--- a/package.json
+++ b/package.json
@@ -1,34 +1,35 @@
 {
-  "name": "repfeed",
+  "name": "assignment-3-3",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "vue-cli-service serve"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/matanbruker/repfeed.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/matanbruker/repfeed/issues"
-  },
-  "homepage": "https://github.com/matanbruker/repfeed#readme",
   "dependencies": {
-    "axios": "^0.21.0",
-    "body-parser": "^1.19.0",
-    "client-sessions": "^0.8.0",
-    "cors": "^2.8.5",
-    "debug": "^4.3.1",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "follow": "^1.1.0",
-    "morgan": "^1.10.0",
-    "msnodesqlv8": "^2.0.8",
-    "mssql": "^6.3.0"
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
+    "bootstrap-vue": "^2.15.0",
+    "core-js": "^3.6.5",
+    "mdbvue": "^6.7.1",
+    "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
+    "vue-cookies": "^1.7.2",
+    "vue-multiselect": "^2.1.6",
+    "vue-router": "^3.2.0",
+    "vuelidate": "^0.7.5"
   },
-  "devDependencies": {},
-  "description": ""
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "~4.4.0",
+    "@vue/cli-plugin-eslint": "~4.4.0",
+    "@vue/cli-plugin-router": "~4.4.0",
+    "@vue/cli-service": "~4.4.0",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^4.14.1",
+    "prettier": "^1.19.1",
+    "sass-loader": "^8.0.2",
+    "vue-template-compiler": "^2.6.11"
+  }
 }
