--- a/Fronted/package.json
+++ b/Fronted/package.json
@@ -35,7 +35,7 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {"no-console":"off"},
     "parserOptions": {
       "parser": "babel-eslint"
     }
