--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/matanbruker/repfeed#readme",
   "dependencies": {
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
     "client-sessions": "^0.8.0",
@@ -30,6 +30,7 @@
     "morgan": "^1.10.0",
     "msnodesqlv8": "^2.0.8",
     "mssql": "^6.3.0",
+    "vue-async-function": "^3.1.2",
     "vue-dynamic-dropdown": "^1.0.12"
   },
   "devDependencies": {},
